# TwoConstraintKnapsackAlgorythms

./: .gitignore  CMakeLists.txt  MinizincDriver.py  README.md  TwoConstraintKnapsack.mzn  run.py
docs/: page.dokuwiki
include/: TwoConstraintsKnapsack.h  geneticAlgorythm.h  limitheaders.h  problem.h  util.h
results/: benchmark_data_20250504_215056.csv  benchmark_data_20250504_224209.csv  benchmark_data_20250504_225115.csv  benchmark_data_20250504_235209.csv  benchmark_data_20250525_201842.csv  benchmark_data_20250525_202446.csv
src/: TwoConstrainstsKnapsack.cpp  bruteKnapsack.cpp  bruteKnapsackCuda.cu  bruteKnapsackPar.cpp  dynamicKnapsack.cpp  dynamicKnapsackCuda.cu  geneticAlgorythm.cpp  geneticAlgorythmCuda.cu  geneticAlgorythmPar.cpp  geneticKnapsack.cpp  greedyKnapsack.cpp  greedyKnapsackCuda.cu  greedyKnapsackPar.cpp  testgen.cpp  util.cpp
